fix: editor style refinements (squashed)
commit 1fd6299e3f7deddbc3e322353114f1de3504112b
Author: Steve Lambert <67271+slambert@users.noreply.github.com>
Date:   Wed May 22 11:31:15 2024 -0400

    fix: editor buttons styled

    the column button selector was getting outlined. This line was too vague.

commit 00a095253277a5c1bea7fb9a5b8c4b78e37db39b
Author: Steve Lambert <67271+slambert@users.noreply.github.com>
Date:   Wed May 22 10:01:45 2024 -0400

    feat: utilities added to editor styles

    maybe a bad idea, but so far seems good.

commit 846962e1a4e1b6a53319ca2a353cb854892a71f3
Author: Steve Lambert <67271+slambert@users.noreply.github.com>
Date:   Tue May 21 14:14:49 2024 -0400

    fix: some headers not appearing in editor

--- a/src/css/_c4aa-editorStyles.css
+++ b/src/css/_c4aa-editorStyles.css
@@ -127,7 +127,7 @@ h6 {
 	transform: rotate(-2deg);
 }
 
-.is-style-c4aa-clipPath-heading,
+.is-style-c4aa-clipPath-heading:not(h1, h5, h6),
 .is-style-c4aa-clipPath-heading a { 
 	color: var( --color-brandWhite );
 }
@@ -206,8 +206,6 @@ h4.is-style-c4aa-clipPath-heading a {
 
 
 /* Buttons */
-
-.editor-styles-wrapper button,
 .editor-styles-wrapper .button,
 .editor-styles-wrapper .wp-element-button,
 .editor-styles-wrapper .entry .entry-content .wp-block-file .wp-block-file__button,
@@ -272,3 +270,76 @@ a:hover {
 .entry .entry-content blockquote a:link, .entry .entry-content blockquote a {
 	font-weight: inherit;
 }
+
+
+/* Utilities from _05-utilities.css */
+
+.no-hyphens * {
+	-webkit-hyphens: manual;
+	-ms-hyphens: manual;
+	hyphens: manual;
+  }
+  
+  .u-display-inline-block {
+	display: inline-block;
+  }
+  
+  .u-display-block {
+	display: block;
+  }
+  
+  .u-text-align-center {
+	text-align: center;
+  }
+  
+  .u-align-items-center {
+	align-items: center;
+  }
+  
+  .u-text-align-right {
+	text-align: right;
+  }
+  
+  /* Viewport Height Utilities */
+  
+  .u-min-height-100vh {
+	min-height: 100vh;
+  }
+  
+  .u-min-height-80vh {
+	min-height: 80vh;
+  }
+  
+  /* Rotation Utilities */
+  
+  .u-rotate-1 {
+	transform: rotate(1deg);
+  }
+  
+  .u-rotate-neg1 {
+	transform: rotate(-1deg);
+  }
+  
+  .u-rotate-2 {
+	transform: rotate(2deg);
+  }
+  
+  .u-rotate-neg2 {
+	transform: rotate(-2deg);
+  }
+  
+  .u-rotate-3 {
+	transform: rotate(3deg);
+  }
+  
+  .u-rotate-neg3 {
+	transform: rotate(-3deg);
+  }
+  
+  .u-multiply {
+	mix-blend-mode: multiply;
+  }
+  
+  .u-darken {
+	mix-blend-mode: darken;
+  }
